<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="294dp"
            android:layout_height="39dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/underdog"
            android:gravity="center"

            android:text="@string/create_profile"
            android:textColor="@color/purple_dark"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView android:id="@+id/profileImageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_photo"
            android:background="@drawable/circle_background"
            android:clipToOutline="true"
            android:paddingTop="15dp"
            android:layout_margin="10dp"
            android:outlineProvider="background"
            android:contentDescription="@string/profile_image"/>
<!--        <ImageView-->
<!--            android:id="@+id/profileImageView"-->
<!--            android:layout_width="120dp"-->
<!--            android:layout_height="120dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:src="@drawable/profile_photo"-->
<!--            android:background="@drawable/circle_background"-->
<!--            android:layout_marginBottom="16dp" />-->

        <Button
            android:id="@+id/selectImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_primary"
            android:textStyle="bold"
            android:text="@string/choose_photo" />


        <EditText
            android:id="@+id/emailInput"
            style="@style/ModernInput"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText android:id="@+id/firstNameInput"
            style="@style/ModernInput" android:inputType="text" android:hint="@string/first_name"/>
        <EditText android:id="@+id/lastNameInput" android:inputType="text" style="@style/ModernInput" android:hint="@string/last_name"/>
        <EditText android:id="@+id/usernameInput" android:inputType="text" style="@style/ModernInput" android:hint="@string/username"/>

        <EditText android:id="@+id/passwordInput" style="@style/ModernInput" android:hint="@string/password" android:inputType="textPassword"/>
        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_input"
            android:padding="12dp"
            android:spinnerMode="dropdown"/>

        <!-- Spinner за практика -->
        <Spinner
            android:id="@+id/practiceSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_input"
            android:padding="12dp"
            android:spinnerMode="dropdown"/>

        <Spinner
            android:id="@+id/appLanguageSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_input"
            android:padding="12dp"
            android:spinnerMode="dropdown"
            android:entries="@array/language_codes" />


        <Button
            android:id="@+id/createProfileBtn"
            android:text="@string/create_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_button_primary"
            android:elevation="4dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:layout_marginBottom="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>

