<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <!-- Лого -->
        <ImageView
            android:layout_width="281dp"
            android:layout_height="271dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="Pixee logo"
            android:src="@drawable/pixee" />

        <!-- Заглавие -->
        <TextView
            android:layout_width="301dp"
            android:layout_height="101dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/underdog"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/purple_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <!-- Имейл -->
        <EditText
            android:id="@+id/loginEmailInput"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="15sp"
            style="@style/ModernInput" />

        <!-- Парола -->
        <EditText
            android:id="@+id/loginPasswordInput"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="15sp"
            style="@style/ModernInput" />

        <!-- Бутон -->
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_button_primary"
            android:elevation="4dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>
</ScrollView>
